--- a/resources/linux-c-dev-tools/api-alpine-python/Dockerfile
+++ b/resources/linux-c-dev-tools/api-alpine-python/Dockerfile
@@ -1,15 +1,10 @@
 # Run: docker build --tag linux-c-dev .
 # Run: docker run -it --rm -d --publish=8080:80 --name api linux-c-dev
 # Use a base image with Linux and Python 3
-FROM alpine:latest
-
 # https://stackoverflow.com/questions/62554991/how-do-i-install-python-on-alpine-linux
-# Install python/pip
-ENV PYTHONUNBUFFERED=1
-RUN apk add --update --no-cache python3 && ln -sf python3 /usr/bin/python
-RUN python3 -m ensurepip
-RUN pip3 install --no-cache --upgrade pip setuptools
+FROM python:3.12-alpine as library
 
+# Install C/C++ dependencies
 RUN apk --no-cache add build-base gcc
 
 # Set the working directory
@@ -17,7 +12,7 @@ WORKDIR /app
 
 # Install parser dependencies
 COPY ./requirements.txt ./requirements.txt
-RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
+RUN pip3 install --no-cache-dir --upgrade -r ./requirements.txt
 
 COPY ./api.py ./api.py
 COPY ./scripts.py ./scripts.py
